kubernetes/database/pgadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: database
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4:9.13.0
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/pgadmin
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pgadmin-data
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: database
spec:
  selector:
    app: pgadmin
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
  namespace: database
  annotations:
    kubernetes.io/ingress.class: traefik
    hajimari.io/enable: "true"
    hajimari.io/appName: PGAdmin
    hajimari.io/group: Cluster
    hajimari.io/icon: simple-icons:postgresql
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: 'traefik-forwardauth-authelia@kubernetescrd'
    external-dns.alpha.kubernetes.io/hostname: pgadmin.saturn.ong
    external-dns.alpha.kubernetes.io/target: direct.saturn.ong
spec:
  tls:
    - secretName: pgadmin.saturn.ong-tls
  rules:
    - host: "pgadmin.saturn.ong"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: pgadmin
                port:
                  number: 80
